--- a/API/package.json
+++ b/API/package.json
@@ -16,5 +16,9 @@
     "mongoose": "^6.0.13",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.1.6",
+    "tape": "^5.3.2"
   }
 }
