--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "test": "node test | tap-spec"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "supertest": "^6.1.6",
+    "tap-spec": "^5.0.0",
     "tape": "^5.3.2"
   }
 }
